# SoftwareTools

./: .gitignore  Cargo.toml  README.md  rust-toolchain  src  target
Rust/: README.md  flake.nix
Rust/func-iter/: Cargo.toml
Rust/func-iter/src/: lib.rs
Rust/sfw-tools/: Cargo.toml  README.md  rust-toolchain  rust-toolchain.old  rust-toolchain.simple  tmp
Rust/sfw-tools/src/: bytes_iter.rs  compress.rs  compression.rs  constants.rs  copying.rs  counting.rs  cp.rs  detab.rs  echo.rs  entab.rs  error.rs  iter_extra.rs  lib.rs  main.rs  sfwtools.rs  tabs.rs  util.rs  wc.rs
Rust/sfw-tools/test_data/: non_repeating.txt  non_repeating_repeating.txt  tabs.txt
