[package]
name = "func-iter"
version = "0.1.0"
authors = ["Brandon Barker <brandon.barker@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
# license-file = "LICENSE.txt"
description  = "Functional programming utitilies for iterators and collections"
categories = ["command-line-utilities"]
homepage = "https://github.com/bbarker/SoftwareTools"
repository = "https://github.com/bbarker/SoftwareTools"
documentation = "https://docs.rs/func-iter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "funciter"
path = "src/lib.rs"


[dependencies]
# byteorder = "1.4.2"
fp-core = "0.1.9"
peeking_take_while = "0.1.2"
tailcall = "0.1.6"
# tailcall = { git = "https://github.com/alecdotninja/tailcall.git", branch = "rewrite-as-loop"}
# im = "15.0.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
