[package]
name = "sfw-tools"
version = "0.1.0"
authors = ["Brandon Barker <brandon.barker@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"
categories = ["command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sfwtools"
path = "src/lib.rs"

[[bin]]
name = "sfwtools"
path = "src/main.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[dependencies]
fp-core = "0.1.9"
seahorse = "1.1.1"
# im = "15.0.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]