[package]
name = "sfw-tools"
version = "0.1.1"
authors = ["Brandon Barker <brandon.barker@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
# license-file = "LICENSE.txt"
description  = "Functions and programs from the book Software Tools"
categories = ["command-line-utilities"]
homepage = "https://github.com/bbarker/SoftwareTools"
repository = "https://github.com/bbarker/SoftwareTools"
documentation = "https://docs.rs/sfw-tools"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sfwtools"
path = "src/lib.rs"

[[bin]]
name = "sfwtools"
path = "src/main.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[dependencies]
fp-core = "0.1.9"
seahorse = "1.1.1"
# tailcall = "0.1.4"
tailcall = { git = "https://github.com/bbarker/tailcall.git", branch = "Result"}
# im = "15.0.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]